--- a/config_RILEWS.conf
+++ b/config_RILEWS.conf
@@ -15,7 +15,8 @@ work_dir=/media/Fondecyt_WRF/NHESS_model
 folder_data=Data/
 # pagina/ip desde donde se bajan los datos de pp
 rainfall_ip=https://data.chc.ucsb.edu/products/EWX/data/forecasts/CHIRPS-GEFS_precip_v12/daily_16day/
-slope_data=DEM/Slope_SRTM_Zone_WGS84.tif
+#slope_data=DEM/Slope_SRTM_Zone_WGS84.tif
+slope_data=Slope_SRTM_Zone_WGS84.tif
 rainfall_name=Data/data1day
 
 [DMC_server]
@@ -25,10 +26,10 @@ user=rilews
 passwd=rilews
 
 [ML]
-path=PKL/
+path=models/catboost_model_random_search.pkl
 
 [NC]
-lc = Data/WRFProno_20240912062620.nc
+lc = WRFProno_20240908181246.nc
 
 [output]
 # requeire sshpass en sistema
