avance a structu e iteracion en todas las fechas del nc_to_tif

--- a/config_RILEWS.conf
+++ b/config_RILEWS.conf
@@ -40,3 +40,6 @@ pass_ftp=s8Uz46ywY31
 path_remote=/home/rilews/Documents/data/
 # Carpeta de salida de machine learning
 folder_out=Output/
+resolution = 0.01
+# Foder de salida de los datos
+path_soil_data = Soils/
